# rfsoapyfile

./: README.md  pyproject.toml  readme.py  setup.py  soapyfile.py
res/: readme.py
soapyfile/: __init__.py  soapyfile.py
src/soapyfile/: soapyfile.py
