[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "soapyfile"
version = "0.2.0"
description = "Record SDR to wav file using soapysdr library"
keywords = [ "soapyfile",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License",]
dependencies = [ "numpy",]

[[project.authors]]
name = "George Magiros"
email = "gmagiros@gmail.com"

[project.license]
text = "MIT"

[project.readme]
text = "Record SDR to wav file using soapysdr library"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/roseengineering/rfsoapyfile"

[project.scripts]
soapyfile = "soapyfile.soapyfile:main"

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = [ "soapyfile" ]

# [tool.setuptools.package-dir]
# soapyfile = "src/soapyfile"

